<resources>
    <string name="app_name">My Application</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_c">Activity C</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">button 2</string>
    <string name="bukirwa_sonia">BUKIRWA SONIA</string>
    <string name="android_track">ANDROID TRACK</string>
    <string name="kenya">KENYA</string>
    <string name="soniabukirwa_gmail_com">soniabukirwa@gmail.com</string>
    <string name="_0715471566">0715471566</string>
    <string name="todo">TODO</string>
</resources>
